# openapi-mcp-bridge

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  openapi-mcp-prompts.md  pyproject.toml
.claude/: settings.json
.claude/skills/: test.md
config/: apis.json
mock-petstore/: README.md  app.py  openapi_spec.json  run.sh
src/: __init__.py  config.py  executor.py  guardrails.py  parser.py  registry.py  server.py
src/search/: __init__.py  base.py  embedding.py  fuzzy.py
tests/: __init__.py  test_embedding_comparison.py  test_executor.py  test_integration.py  test_parser.py  test_search.py
